--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@angular/platform-browser": "~10.0.2",
     "@angular/platform-browser-dynamic": "~10.0.2",
     "@angular/router": "~10.0.2",
+    "angularfire2": "^5.4.2",
+    "firebase": "^7.16.0",
     "hammerjs": "^2.0.8",
     "rxjs": "~6.5.5",
     "rxjs-compat": "^6.6.0",
